--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <antlr4test.version>1.22</antlr4test.version>
         <jackson.verion>2.15.2</jackson.verion>
         <kotlin.version>1.9.0-Beta</kotlin.version>
+        <sql-parser.version>4.0.0-SNAPSHOT</sql-parser.version>
     </properties>
 
     <dependencies>
@@ -75,6 +76,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.verion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.melin.superior</groupId>
+            <artifactId>superior-flink-parser</artifactId>
+            <version>${sql-parser.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
