--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <antlr4.version>4.9.3</antlr4.version>
         <antlr4test.version>1.22</antlr4test.version>
         <jackson.verion>2.15.2</jackson.verion>
-        <kotlin.version>1.9.0-Beta</kotlin.version>
+        <kotlin.version>1.9.0</kotlin.version>
         <sql-parser.version>4.0.0-SNAPSHOT</sql-parser.version>
     </properties>
 
